# EmailApp

./: .env.example  .gitignore  README.md  README_CN.md  dependencies.py  email_utils.py  main.py  models.py  nohup.out  pyproject.toml
app/: __init__.py  config.py  db.py  email_utils.py  forms.py  models.py  routes.py  utils.py
app/static/: compose_editor.js  style.css
app/templates/: email_settings.html  index.html  login.html  register.html
docs/: code_tour.py
instance/: emailapp.db
static/: compose_editor.js  style.css
templates/: index.html
tests/: conftest.py  test_app.py  test_auth.py
