[project]
name = "emailapp"
version = "0.2.0"
description = "邮件发送服务 - 基于 FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "cairosvg",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.28.0",
]
